<resources>
    <string name="app_name">Meditant v1.0</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="are_you_already_registered_sign_in">Are you already registered? Sign in?</string>
    <string name="sign_in">Sign In</string>
    <string name="are_you_not_registered_sign_up">Are you not registered? Sign Up?</string>
</resources>
